content/vault/v1.14.x/content/docs/configuration/log-requests-level.mdx
---
layout: docs
page_title: Log Completed Requests - Configuration
description: |-
  Vault can be configured to log completed requests.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:43:42-05:00
last_modified: 2025-07-02T11:43:42-05:00
# END AUTO GENERATED METADATA
---

# Log completed requests

Vault can be configured to log completed requests using the `log_requests_level` configuration parameter.

## Activating logging completed requests

By default, logging completed requests is disabled. To activate request logging, set the `log_requests_level`
configuration option in the Vault server configuration to the desired logging level. The acceptable logging levels are
`error`, `warn`, `info`, `debug`, `trace`, and `off`, which is the default.

Completed requests will be logged at the configured level, if Vault's log level includes this level of logs. For
example, if `log_level` is set to `debug`, but `log_requests_level` is set to `trace`, completed requests will
not be logged.

If the Vault server is already running, you can still configure the parameter in the Vault server configuration,
and then send a `SIGHUP` signal to the Vault process.

```hcl
log_requests_level = "debug"
log_level = "debug"

listener "tcp" {
  # ...
}
```

## Deactivating logging completed requests

To deactivate logging completed requests, simply remove the `log_requests_level` configuration parameter
from the Vault server configuration, or set it to `off`, and send a `SIGHUP` signal to the Vault process.

```hcl
log_requests_level = "off"
log_level = "debug"

listener "tcp" {
  # ...
}
```
